--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <java.version>1.8</java.version>
         <mysql.version>8.0.21</mysql.version>
-        <spring.boot.version>2.5.3</spring.boot.version>
+        <spring.boot.version>2.6.3</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -67,15 +67,7 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -87,6 +79,8 @@
         <module>shardingjdbc</module>
         <module>tkmybatis</module>
         <module>eshighclient</module>
+        <module>starter-demo</module>
+        <module>starter-test</module>
     </modules>
 
     <build>
