--- a/shardingjdbc/pom.xml
+++ b/shardingjdbc/pom.xml
@@ -7,7 +7,6 @@
         <artifactId>practise</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.ayris</groupId>
     <artifactId>shardingjdbc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>shardingjdbc</name>
@@ -19,6 +18,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -36,14 +45,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
