--- a/tkmybatis/src/main/resources/application.properties
+++ b/tkmybatis/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&useTimezone=true
-spring.datasource.username=dev
+spring.datasource.url=jdbc:mysql://110.42.203.15:3306/order?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&useTimezone=true
+spring.datasource.username=root
 spring.datasource.password=123456
 
 #spring.datasource.druid.enable=true
@@ -14,3 +14,4 @@ spring.datasource.password=123456
 #spring.datasource.druid.filter.log4j2.statement-executable-sql-log-enable=true
 
 logging.level.com.ayris.tkmybatis.mapper=debug
+logging.level.web=debug
